@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2016 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -72,8 +72,8 @@
 	    This only checks API signatures; it doesn't imply that it
 	    works correctly in a runtime of that version.
 	-->
-	<android.api.level>9</android.api.level>
-	<android.version>2.3.1_r2</android.version>
+	<android.api.level>19</android.api.level>
+	<android.version>4.4_r1</android.version>
     </properties>
 
     <build>
